# PyWEB_HW_13_2

./: pyproject.toml
quotes/from_mongo_to_postgres/: config.ini  main.py  seed.py
quotes/quoteapp/: forms.py  models.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_author.py  0003_quote.py  0004_alter_quote_quote.py  0005_rename_name_tag_tag.py
quotes/quoteapp/templates/quoteapp/: author.html  base.html  detail_author.html  index.html  info.html  quote.html  tag.html
quotes/quotes/: settings.py  urls.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: login.html  signup.html
